After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 705297 - shell: prevent the window from being taller than the height of the monitor
shell: prevent the window from being taller than the height of the monitor
Status: RESOLVED FIXED
Product: gnome-control-center
Classification: Core
Component: shell
unspecified
Other All
: Normal normal
: ---
Assigned To: Control-Center Maintainers
Control-Center Maintainers
Depends on:
Blocks:
 
 
Reported: 2013-08-01 15:23 UTC by Thomas Wood
Modified: 2013-08-02 15:36 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
shell: prevent the window from being taller than the height of the monitor (2.04 KB, patch)
2013-08-01 15:23 UTC, Thomas Wood
committed Details | Review
shell: prevent a warning if the monitor number is not available yet (824 bytes, patch)
2013-08-02 12:45 UTC, Thomas Wood
committed Details | Review

Description Thomas Wood 2013-08-01 15:23:51 UTC
Make sure the window is not taller than the height of the monitor when not in
small screen mode.
Comment 1 Thomas Wood 2013-08-01 15:23:53 UTC
Created attachment 250634 [details] [review]
shell: prevent the window from being taller than the height of the monitor
Comment 2 Bastien Nocera 2013-08-01 15:50:57 UTC
Review of attachment 250634 [details] [review]:

Looks good for gnome-3-8 and master
Comment 3 Thomas Wood 2013-08-01 16:13:39 UTC
Attachment 250634 [details] pushed as b52fde3 - shell: prevent the window from being taller than the height of the monitor
Comment 4 Bastien Nocera 2013-08-02 10:11:53 UTC
Needs some fixing...

$ LC_ALL=en_GB.UTF-8 ./gnome-control-center 

(gnome-control-center:26900): Gdk-CRITICAL **: gdk_screen_get_monitor_geometry: assertion 'monitor_num >= 0' failed

(gnome-control-center:26900): Gdk-CRITICAL **: gdk_screen_get_monitor_geometry: assertion 'monitor_num >= 0' failed
Comment 5 Thomas Wood 2013-08-02 12:45:38 UTC
Created attachment 250697 [details] [review]
shell: prevent a warning if the monitor number is not available yet
Comment 6 Bastien Nocera 2013-08-02 14:30:27 UTC
Review of attachment 250697 [details] [review]:

Looks good
Comment 7 Thomas Wood 2013-08-02 15:36:29 UTC
Attachment 250697 [details] pushed as eca503b - shell: prevent a warning if the monitor number is not available yet