shell: prevent the window from being taller than the height of the monitor

https://bugzilla.gnome.org/show_bug.cgi?id=705297